--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,18 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+  <servlet-name>Jersey Rest Service</servlet-name>
+  <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+  <init-param>
+  <param-name>com.sun.jersey.config.property.packages</param-name>
+  <param-value>Status</param-value>
+  </init-param>
+  <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+  <servlet-name>Jersey Rest Service</servlet-name>
+  <url-pattern>/api/*</url-pattern>
+  </servlet-mapping>
 </web-app>
